Fixed borken video layout on safari

--- a/webrtc/videoroom/assets/css/app.scss
+++ b/webrtc/videoroom/assets/css/app.scss
@@ -58,7 +58,6 @@ $media-controls-height: 80px;
 
   video {
     width: 100%;
-    height: 100%;
     border-radius: 0.5 * $space;
     border-color: #383838;
     border-style: solid;
